--- a/_posts/2016-06-06-android开发环境搭建.md
+++ b/_posts/2016-06-06-android开发环境搭建.md
@@ -12,23 +12,21 @@ tags:
 ---
 # android 开发环境搭建
 
-标签（空格分隔）： dev
-
 ---
 
 现使用的主流android 开发环境主要由jdk ,sdk ,android studio ,gradle 组成.
 ## JDK配置
-jdk配置很简单,如有不清楚,请参考 http://www.mobile-open.com/2016/972518.html
+jdk配置很简单,如有不清楚,请参考 [jdk配置](http://www.mobile-open.com/2016/972518.html)
 ## sdk ,android studio 
 都有安装文件,下载安装即可,sdk尽量以拷贝为主(sdk需要用到的我基本全部下载了的20G+),建议sdk与android studio分开安装.
-android studio, sdk官网下载地址 https://developer.android.com/studio/index.html
+android studio, sdk官网下载地址 [官方文档](https://developer.android.com/studio/index.html)
 如无法访问请使用下面链接下载
 http://www.androiddevtools.cn
 启动AS后,在File->Project Structure中需要设置JDK SDK相关信息
 ## gradle 
 gradle是一种构建工具,android studio 就是使用它构建工程.这个在运行AS时会自动在用户名文件下生成一个.gralde文件夹,里面可存在不同的版本.  
 
-在~/.gradle/wrapper/dists目录下的文件可以离线下载后直接放进去,AS下载很慢一般需要使用哪个版本直接在AS配置文件中改了后生成相应的文件后,直接在http://services.gradle.org/distributions下载放入重启AS即可.  
+在~/.gradle/wrapper/dists目录下的文件可以离线下载后直接放进去,AS下载很慢一般需要使用哪个版本直接在AS配置文件中改了后生成相应的文件后,直接在[这里](http://services.gradle.org/distributions)下载放入重启AS即可.  
 
 
 在.gradle文件夹下建一个init.gradle文件,作用是下载相应的依赖包时使用国内镜像,内容为
