--- a/_posts/2016-06-06-android开发环境搭建.md
+++ b/_posts/2016-06-06-android开发环境搭建.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      android 开发环境搭建
-subtitle:   简单环境搭建
+#subtitle:   简单环境搭建
 date:       2016-06-06
 author:     wugian
 header-img: img/post-bg-ios9-web.jpg
